--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,6 @@ mypy-extensions==0.4.3
 nose==1.3.7
 packaging==21.3
 pathspec==0.9.0
-pkg_resources==0.0.0
 platformdirs==2.4.1
 proto-plus==1.19.8
 protobuf==3.19.3
@@ -40,6 +39,7 @@ pyasn1-modules==0.2.8
 pyparsing==3.0.6
 python-dotenv==0.19.2
 python-randomword-fr==1.0.0
+PyYAML==6.0
 Random-Word==1.0.7
 requests==2.27.1
 rsa==4.8
