--- a/DockerFile
+++ b/DockerFile
@@ -3,9 +3,11 @@ FROM python:3-alpine
 COPY requirements.txt /bot/
 WORKDIR /bot
 
-RUN apk add --no-cache --virtual deps gcc musl-dev libffi-dev g++ git && \
-  pip3 install pip --no-cache-dir --upgrade && pip3 install setuptools wheel --no-cache-dir --upgrade && \
-  pip3 install -r requirements.txt --upgrade
+RUN apk add --no-cache --virtual build-deps gcc musl-dev libffi-dev g++ git python3-dev musl-dev postgresql postgresql-dev && \
+  pip3 install pip --no-cache-dir --upgrade && pip3 install setuptools wheel --no-cache-dir --upgrade && pip install psycopg2 && \
+  apk add jpeg-dev zlib-dev libjpeg && \
+  pip3 install -r requirements.txt --upgrade && \
+  apk del build-deps
 
 COPY *.py /bot/
 COPY *.env /bot/
